# django-morepath

./: .gitignore  CREDITS.txt  LICENSE.txt  README.rst  dev.txt  plan.txt  pyproject.toml  setup.cfg
django_morepath/: __init__.py  views.py
testapp/: app.py  manage.py  settings.py  urls.py  views.py
tests/: test_core.py
