[metadata]
name = django_morepath
version = 0.1
description = Morepath integration for Django
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/morepath/django-morepath
license = BSD
author = Martijn Faassen
author_email = faassen@startifact.com
keywords = Django, Morepath, REST
classifiers =
    Framework :: Django
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    morepath
tests_require =
    pytest
    pytest-django
    tox
    isort
    black

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
skip = env,.tox,.history,.eggs
; skip_glob =
not_skip = __init__.py
known_django=django
known_first_party=django_morepath
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
max-line-length=80
exclude=env,.tox,doc

[flake8]
max-line-length=80
exclude=env,.tox,doc

[zest.releaser]
create-wheel = yes